<resources>
    <string name="app_name">HDMIVolumeOSD</string>

    <string name="settings_global_popup_headline">Global Settings</string>
    <string name="settings_global_label_duration">Duration</string>

    <string name="settings_temperature_popup_headline">Temperatur Monitor (MQTT)</string>
    <string name="settings_temperature_label_active">Active</string>
    <string name="settings_temperature_label_max_temp">Max. Temperature</string>
    <string name="settings_temperature_label_min_temp">Min. Temperature</string>


    <string name="settings_temperature_label_position">Position</string>
    <string name="settings_temperature_label_style">Style</string>
    <string name="settings_temperature_label_padding">Padding</string>
    <string name="settings_temperature_label_host">Host</string>
    <string name="settings_temperature_description_host">Protocol, host and port of the MQTT Server.\nExample: tcp://192.168.1.13:1883</string>
    <string name="settings_temperature_label_clientid">ClientId</string>
    <string name="settings_temperature_description_clientid">Unique Client Id</string>
    <string name="settings_temperature_label_topic">Topic</string>
    <string name="settings_temperature_description_topic">MQTT Topic, which results in one or many values (float)\nExample: TopicFoo/Bar/+</string>
    <string name="settings_temperature_label_username">Username</string>
    <string name="settings_temperature_label_password">Password</string>

    <string name="settings_volume_popup_headline">OSD Settings</string>
    <string name="settings_volume_label_position">Position</string>
    <string name="settings_volume_label_style">Style</string>
    <string name="settings_volume_label_mapping">Volume Value Mapping</string>
    <string name="settings_volume_label_limit_to_hdmi">Only show on HDMI</string>
    <string name="settings_volume_label_size">Size (in %)</string>
    <string name="settings_volume_label_padding">Padding</string>

    <string name="settings_bluetooth_label_devices">Device</string>

    <string name="settings_button_save">Save</string>
    <string name="settings_button_cancel">Cancel</string>


    <string name="main_headline">HDMI Volume OSD</string>
    <string name="main_version_tag">Version: v%1$s\nBuild: %2$d</string>
    <string name="main_sub_headline">For Philips Android 9 TVs</string>
    <string name="main_permisson_hint_headline">Permission not set</string>
    <string name="main_permisson_hint_description">You need to grant permission to "display overlays" to this app.</string>
    <string name="main_permisson_hint_how_to">Open Settings\n↪ Android Settings\n↪ Device Settings\n↪ Storage\n↪ Internal shared storage\n↪ Apps\n↪ Special app Access\n↪ Display over other apps\n\nSet the switch next to this App to on and open this app again.</string>

    <string name="main_settings_headline">Settings</string>
    <string name="main_settings_button_global">Global</string>
    <string name="main_settings_button_label_volume">Volume</string>
    <string name="main_settings_button_temperature">Temperature</string>
    <string name="main_settings_button_bluetooth">Bluetooth</string>
    <string name="settings_bluetooth_popup_headline">Bluetooth</string>

    <string name="apple_chart_temperature_size">30</string>
    <string name="apple_chart_temperature_segment_size_main">1</string>
    <string name="apple_chart_temperature_segment_size_sub">1</string>
</resources>